--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>JAPAN</h1>
+	<br>
+	<p>Japan is a beautiful country</p>
+	<ol>
+		<li><strong>attractions 1</strong></li>
+		<li>attractions 2</li>
+		<li>attractions 3</li>
+		<li>attractions 4</li>
+		<li>attractions 5</li>
+	</ol>
+	<br>
+	<ul>
+		<li><strong>food 1</strong></li>
+		<li>food 2</li>
+		<li>food 3</li>
+		<li>food 4</li>
+		<li>food 5</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
