--- a/main.html
+++ b/main.html
@@ -13,10 +13,12 @@
 	<p>Japan is a beautiful country</p>
 	<ol>
 		<li><strong>attractions 1</strong></li>
-		<li>attractions 2</li>
-		<li>attractions 3</li>
+		<li><i>attractions 2</i></li>
+		<li><b>attractions 3</b></li>
 		<li>attractions 4</li>
 		<li>attractions 5</li>
+		
+		
 	</ol>
 	<br>
 	<ul>
